kubernetes/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: desafio-devops
spec:
  selector:
    app: desafio-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
